open_sources: add distclean and clean target to minigui
Signed-off-by: Sertac TULLUK <stulluk@gmail.com>

--- a/open_sources/libminigui-1.3.3/makefile
+++ b/open_sources/libminigui-1.3.3/makefile
@@ -71,3 +71,5 @@ defconfig:
 	$(MAKE) -C scripts/lxdialog -f makefile.lx all
 	$(CONFIG_SHELL) scripts/Menuconfig configs/config.in
 	@rm .defconfig
+.PHONY : clean
+.PHONY : distclean
