open_sources: fix freetype support for directfb
modify name of configure.in to configure.ac
add linker flag for freetype to configure.ac
fix makefile for busybox

Signed-off-by: Sertac TULLUK <stulluk@gmail.com>

--- a/open_sources/DirectFB-1.0.0/configure.ac
+++ b/open_sources/DirectFB-1.0.0/configure.ac
@@ -1341,7 +1341,7 @@ AM_CONDITIONAL(BUILD_TOOLS, test "$with_tools" = "yes")
 AM_CONDITIONAL(CROSS_COMPILING, test "$cross_compiling" = "yes")
 
 CFLAGS="$CFLAGS $DFB_INTERNAL_CFLAGS"
-DFB_LDFLAGS="$LDFLAGS $ZLIB_LIBS"
+DFB_LDFLAGS="$LDFLAGS $ZLIB_LIBS -lfreetype"
 
 
 
