open_sources: directfb: remove mkdgiff
this file changes everytime we build
so added to .gitignore

Signed-off-by: Sertac TULLUK <stulluk@gmail.com>

--- a/open_sources/DirectFB-1.0.0/.gitignore
+++ b/open_sources/DirectFB-1.0.0/.gitignore
@@ -97,6 +97,7 @@ tools/dfbsummon
 tools/directfb-csource
 tools/fusion_bench
 tools/fx
+tools/mkdgiff
 tools/mkdfiff
 tools/raw15toraw24
 tools/raw16toraw24
