--- a/open_sources/libminigui-1.3.3/.gitignore
+++ b/open_sources/libminigui-1.3.3/.gitignore
@@ -74,3 +74,10 @@ src/standalone/Makefile
 src/sysres/.deps/
 src/sysres/Makefile
 stamp-h1
+autom4te.cache/output.0
+autom4te.cache/requests
+autom4te.cache/traces.0
+config.h.in
+config.h.in~
+configure
+examples/Makefile
