open_sources: minigui: fix build again
config.h and config.h.in seems to be required for building
adding them again to try building

Signed-off-by: Sertac TULLUK <stulluk@gmail.com>

--- a/open_sources/libminigui-1.3.3/.gitignore
+++ b/open_sources/libminigui-1.3.3/.gitignore
@@ -77,7 +77,7 @@ stamp-h1
 autom4te.cache/output.0
 autom4te.cache/requests
 autom4te.cache/traces.0
-config.h.in
-config.h.in~
-configure
-examples/Makefile
+#config.h.in
+#config.h.in~
+#configure
+#examples/Makefile
