open_sources: mtdutils: improve gitignore
title says all

Signed-off-by: Sertac TULLUK <stulluk@gmail.com>

--- a/open_sources/mtd-utils-1.0.0/.gitignore
+++ b/open_sources/mtd-utils-1.0.0/.gitignore
@@ -1,2 +1,14 @@
 *.dep
 *.o
+flash_erase
+flash_eraseall
+flash_info
+flash_lock
+flash_otp_dump
+flash_otp_info
+flash_unlock
+flashcp
+jffs2dump
+mtd_debug
+nanddump
+nandwrite
